--- a/packages/frontend/src/style.css
+++ b/packages/frontend/src/style.css
@@ -8,3 +8,11 @@ body {
 .ant-drawer-body {
   padding: 0 !important;
 }
+
+div::-webkit-scrollbar {
+  width: 0;
+}
+
+div::-webkit-scrollbar-track {
+  background-color: transparent;
+}
